--- a/ZachCashion_Personal_Website/index.html
+++ b/ZachCashion_Personal_Website/index.html
@@ -510,29 +510,143 @@
                 </button>
                 <div class="modal-body text-center">
                     <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tasty Cake</h2>
-                                <!-- Icon Divider -->
-                                <div class="divider-custom">
-                                    <div class="divider-custom-line"></div>
-                                    <div class="divider-custom-icon">
-                                        <i class="fas fa-star"></i>
+                        <div class="row">
+                            <div class="col-md">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class='col-4'>
+                                            4
+                                        </div>
+                                        <div class='col-4'>
+                                            4
+                                        </div>
+                                        <div class='col-4'>
+                                            4
+                                        </div>
                                     </div>
-                                    <div class="divider-custom-line"></div>
                                 </div>
-                                <!-- Portfolio Modal - Image -->
-                                <img class="img-fluid rounded mb-5" src="https://via.placeholder.com/900x650.png" alt="">
-                                <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                <button class="btn btn-primary" href="#" data-dismiss="modal">
-                                    <i class="fas fa-times fa-fw"></i>
-                                    Close Window
-                                </button>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class='col-6'>
+                                            6
+                                        </div>
+                                        <div class='col-6'>
+                                            6
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class='col-12'>
+                                            12
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
+                            <div class="col-md">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class='col-3'>
+                                            3
+                                        </div>
+                                        <div class='col-3'>
+                                            3
+                                        </div>
+                                        <div class='col-3'>
+                                            3
+                                        </div>
+                                        <div class='col-3'>
+                                            3
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class='col-8'>
+                                            8
+                                        </div>
+                                        <div class='col-4'>
+                                            4
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class='col-6'>
+                                            6
+                                        </div>
+                                        <div class='col-3'>
+                                            3
+                                        </div>
+                                        <div class='col-3'>
+                                            3
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class='col-2'>
+                                            2
+                                        </div>
+                                        <div class='col-3'>
+                                            3
+                                        </div>
+                                        <div class='col-2'>
+                                            2
+                                        </div>
+                                        <div class='col-3'>
+                                            3
+                                        </div>
+                                        <div class='col-2'>
+                                            2
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class='col-1'>
+                                            1
+                                        </div>
+                                        <div class='col-1'>
+                                            1
+                                        </div>
+                                        <div class='col-1'>
+                                            1
+                                        </div>
+                                        <div class='col-1'>
+                                            1
+                                        </div>
+                                        <div class='col-1'>
+                                            1
+                                        </div>
+                                        <div class='col-1'>
+                                            1
+                                        </div>
+                                        <div class='col-1'>
+                                            1
+                                        </div>
+                                        <div class='col-1'>
+                                            1
+                                        </div>
+                                        <div class='col-1'>
+                                            1
+                                        </div>
+                                        <div class='col-1'>
+                                            1
+                                        </div>
+                                        <div class='col-1'>
+                                            1
+                                        </div>
+                                        <div class='col-1'>
+                                            1
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> <!--Row-->
+                    </div> <!--Container-->
                 </div>
             </div>
         </div>
