--- a/ZachCashion_Personal_Website/index.html
+++ b/ZachCashion_Personal_Website/index.html
@@ -678,13 +678,13 @@
                             <div class="col">22</div>
                             <div class="col">23</div>
                         </div>
-                    </div> 
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Portfolio Modal 3 -->
+    <!-- Portfolio Modal 3 jsMath Exercies-->
     <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-labelledby="portfolioModal3Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
@@ -711,7 +711,8 @@
                                 <!-- Portfolio Modal - Text -->
                                 <!-- JS Math -->
                                 <div>
-                                    <input type="text" style="margin: 10px 10px 10px 10px;"><button>Input</button>
+                                    <input type="text" id="input" style="margin: 10px 10px 10px 10px;">
+                                    <buttonon click="document.getElementById('input').innerHTML=text()">Input</buttonon>
                                     <div class="container">
                                         <div class="row" style="margin: 10px 10px 10px 10px;">
                                             <div class="col">
@@ -729,13 +730,10 @@
                                             <div class="col">
                                                 Least:
                                             </div>
-
                                         </div>
-
                                     </div>
-
                                 </div>
-                                
+
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
                                     Close Window
@@ -748,7 +746,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 4 -->
+    <!-- Portfolio Modal 4 Factorial -->
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-labelledby="portfolioModal4Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
@@ -762,7 +760,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Controller</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Factorial</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -771,10 +769,6 @@
                                     </div>
                                     <div class="divider-custom-line"></div>
                                 </div>
-                                <!-- Portfolio Modal - Image -->
-                                <img class="img-fluid rounded mb-5" src="https://via.placeholder.com/900x650.png" alt="">
-                                <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
                                     Close Window
@@ -787,7 +781,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 5 -->
+    <!-- Portfolio Modal 5 Fizz Buzz -->
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-labelledby="portfolioModal5Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
@@ -801,7 +795,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Locked Safe</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Fizz Buzz</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -810,10 +804,6 @@
                                     </div>
                                     <div class="divider-custom-line"></div>
                                 </div>
-                                <!-- Portfolio Modal - Image -->
-                                <img class="img-fluid rounded mb-5" src="https://via.placeholder.com/900x650.png" alt="">
-                                <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
                                     Close Window
@@ -826,7 +816,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 6 -->
+    <!-- Portfolio Modal 6 Palindrone -->
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-labelledby="portfolioModal6Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
@@ -840,7 +830,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Submarine</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Palindrone</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -849,10 +839,6 @@
                                     </div>
                                     <div class="divider-custom-line"></div>
                                 </div>
-                                <!-- Portfolio Modal - Image -->
-                                <img class="img-fluid rounded mb-5" src="https://via.placeholder.com/900x650.png" alt="">
-                                <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
                                     Close Window
@@ -879,7 +865,14 @@
     <!-- Custom scripts for this template -->
     <script src="js/freelancer.min.js"></script>
 
-   
+    <!-- Script for js Math-->
+    <script src="js/jsMath.js"></script>
+    <!-- Script for Factorial-->
+    <script src="js/jsFactorial.js"></script>
+    <!-- Script for Fizz Buzz-->
+    <script src="js/jsFizzBuzz.js"></script>
+    <!-- Script for Palindrone-->
+    <script src="js/jsPalindrone.js"></script>
 
 </body>
 
