--- a/ZachCashion_Personal_Website/index.html
+++ b/ZachCashion_Personal_Website/index.html
@@ -711,26 +711,36 @@
                                 <!-- Portfolio Modal - Text -->
                                 <!-- JS Math -->
                                 <div>
-                                    <input type="text" id="input" style="margin: 10px 10px 10px 10px;">
-                                    <buttonon click="document.getElementById('input').innerHTML=text()">Input</buttonon>
-                                    <div class="container">
-                                        <div class="row" style="margin: 10px 10px 10px 10px;">
-                                            <div class="col">
-                                                Sum:
-                                            </div>
-                                            <div class="col">
-                                                Product:
-                                            </div>
-                                            <div class="col">
-                                                Mean:
-                                            </div>
-                                            <div class="col">
-                                                Greatest:
-                                            </div>
-                                            <div class="col">
-                                                Least:
-                                            </div>
+
+                                    <div class="container" style="padding: 50px 50px 50px 50px">
+                                      <div class="row">
+                                        <div class="col">
+                                          <input type="" id="jsMathInput" style="margin: 10px 10px 10px 10px;">
+                                          <button id="jsMathButton" class="btn btn-secondary" click="">
+                                            Input Numbers
+                                          </button>
                                         </div>
+                                        <div class="col" style="border-style: solid; border-color: black; margin: 10px 10px 10px 10px;">
+                                          <div class="row">
+                                            Results:
+                                          </div>
+                                          <div class="row">
+                                            Sum:
+                                          </div>
+                                          <div class="row">
+                                            Product:
+                                          </div>
+                                          <div class="row">
+                                            Mean:
+                                          </div>
+                                          <div class="row">
+                                            Greatest:
+                                          </div>
+                                          <div class="row">
+                                            Least:
+                                          </div>
+                                        </div>
+                                      </div>
                                     </div>
                                 </div>
 
