--- a/ZachCashion_Personal_Website/index.html
+++ b/ZachCashion_Personal_Website/index.html
@@ -715,29 +715,22 @@
                                     <div class="container" style="padding: 50px 50px 50px 50px">
                                       <div class="row">
                                         <div class="col">
-                                          <input type="" id="jsMathInput" style="margin: 10px 10px 10px 10px;">
+                                          <input type="text" id="jsMathInput1">
+                                          <input type="text" id="jsMathInput2">
+                                          <input type="text" id="jsMathInput3">
+                                          <input type="text" id="jsMathInput4">
+                                          <input type="text" id="jsMathInput5">
                                           <button id="jsMathButton" class="btn btn-secondary" click="">
                                             Input Numbers
                                           </button>
                                         </div>
-                                        <div class="col" style="border-style: solid; border-color: black; margin: 10px 10px 10px 10px;">
+                                        <div class="col">
                                           <div class="row">
-                                            Results:
-                                          </div>
-                                          <div class="row">
-                                            Sum:
-                                          </div>
-                                          <div class="row">
-                                            Product:
-                                          </div>
-                                          <div class="row">
-                                            Mean:
-                                          </div>
-                                          <div class="row">
-                                            Greatest:
-                                          </div>
-                                          <div class="row">
-                                            Least:
+                                            <p id="sumResults"></p>
+                                            <p id="meanResults"></p>
+                                            <p id="productResults"></p>
+                                            <p id="greatestResults"></p>
+                                            <p id="leastResults"></p>
                                           </div>
                                         </div>
                                       </div>
