--- a/ZachCashion_Personal_Website/index.html
+++ b/ZachCashion_Personal_Website/index.html
@@ -772,6 +772,25 @@
                                     </div>
                                     <div class="divider-custom-line"></div>
                                 </div>
+
+                                <div class="container" style="padding: 50px 50px 50px 50px">
+                                  <div class="row">
+                                    <div class="col">
+                                      <input type="text" id="jsFactorialInput">
+
+                                      <button id="jsFactorialButton" class="btn btn-secondary" click="">
+                                        Input Number
+                                      </button>
+                                    </div>
+                                    <div class="col">
+                                      <div class="row">
+                                        <p id="factorialResults"></p>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+
+
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
                                     Close Window
@@ -807,6 +826,23 @@
                                     </div>
                                     <div class="divider-custom-line"></div>
                                 </div>
+                                <div class="container" style="padding: 50px 50px 50px 50px">
+                                  <div class="row">
+                                    <div class="col">
+                                      <input type="text" id="jsFizzBuzzInput1">
+                                      <input type="text" id="jsFizzBuzzInput2">
+
+                                      <button id="jsFizzBuzzButton" class="btn btn-secondary" click="">
+                                        Input Numbers
+                                      </button>
+                                    </div>
+                                    <div class="col">
+                                      <div class="row">
+                                        <p id="fizzBuzzResults"></p>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
                                     Close Window
@@ -841,6 +877,22 @@
                                         <i class="fas fa-star"></i>
                                     </div>
                                     <div class="divider-custom-line"></div>
+                                </div>
+                                <div class="container" style="padding: 50px 50px 50px 50px">
+                                  <div class="row">
+                                    <div class="col">
+                                      <input type="text" id="jsPalindroneInput">
+
+                                      <button id="jsPalindroneButton" class="btn btn-secondary" click="">
+                                        Input Word
+                                      </button>
+                                    </div>
+                                    <div class="col">
+                                      <div class="row">
+                                        <p id="palindroneResults"></p>
+                                      </div>
+                                    </div>
+                                  </div>
                                 </div>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
