--- a/ZachCashion_Personal_Website/index.html
+++ b/ZachCashion_Personal_Website/index.html
@@ -208,6 +208,7 @@
 
                 <!-- JS Ex Item 1 -->
                 <div class="col-md-6 col-lg-4">
+                    <div class="d-flex align-items-center justify-content-center" style="">Math</div>
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#jsExercisesModal1">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white">
@@ -220,6 +221,7 @@
 
                 <!-- JS Ex Item 2 -->
                 <div class="col-md-6 col-lg-4">
+                    <div class="d-flex align-items-center justify-content-center" style="">Factorial</div>
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#jsExercisesModal2">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white">
@@ -232,6 +234,7 @@
 
                 <!-- JS Ex Item 3 -->
                 <div class="col-md-6 col-lg-4">
+                  <div class="d-flex align-items-center justify-content-center" style="">Fizz Buzz</div>
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#jsExercisesModal3">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white">
@@ -244,6 +247,7 @@
 
                 <!-- JS Ex Item 4 -->
                 <div class="col-md-6 col-lg-4">
+                  <div class="d-flex align-items-center justify-content-center" style="">Palindrone</div>
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#jsExercisesModal4">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white">
@@ -256,6 +260,7 @@
 
                 <!-- JS Ex Item 5 -->
                 <div class="col-md-6 col-lg-4">
+                    <div class="d-flex align-items-center justify-content-center" style="">To Do App</div>
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#jsExercisesModal5">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white">
@@ -268,6 +273,7 @@
 
                 <!-- JS Ex Item 6 -->
                 <div class="col-md-6 col-lg-4">
+                    <div class="d-flex align-items-center justify-content-center" style="">Comming Soon</div>
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#jsExercisesModal6">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white">
@@ -637,7 +643,7 @@
                     <div class="divider-custom-line"></div>
                   </div>
                   <!-- Portfolio Modal - Image -->
-                  
+
                   <!-- Portfolio Modal - Text -->
                   <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                   <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -683,14 +689,14 @@
                                     <div class="container" style="padding: 50px 50px 50px 50px">
                                         <div class="row">
                                             <div class="col">
-                                              <div style="padding: 5px 5px 5px 5px" class="row"><input type="text" id="jsMathInput1"></div>
-                                              <div style="padding: 5px 5px 5px 5px" class="row"><input type="text" id="jsMathInput2"></div>
-                                              <div style="padding: 5px 5px 5px 5px" class="row"><input type="text" id="jsMathInput3"></div>
-                                              <div style="padding: 5px 5px 5px 5px" class="row"><input type="text" id="jsMathInput4"></div>
-                                              <div style="padding: 5px 5px 5px 5px" class="row"><input type="text" id="jsMathInput5"></div>
-                                              <div class="row"><button id="jsMathButton" class="btn btn-secondary" click="">Input Numbers</button></div>
-                                              <div class="row"><button id="clearButtonMath" class="btn btn-secondary" click="">Clear</button></div>
-                                              <div class="row"><button id="toggleButtonMath" class="btn btn-secondary" click="">Show Code</button></div>
+                                              <div style="padding: 5px 5px 5px 5px" class="row"><input type="text" id="jsMathInput1" placeholder="Inter number"></div>
+                                              <div style="padding: 5px 5px 5px 5px" class="row"><input type="text" id="jsMathInput2" placeholder="Inter number"></div>
+                                              <div style="padding: 5px 5px 5px 5px" class="row"><input type="text" id="jsMathInput3" placeholder="Inter number"></div>
+                                              <div style="padding: 5px 5px 5px 5px" class="row"><input type="text" id="jsMathInput4" placeholder="Inter number"></div>
+                                              <div style="padding: 5px 5px 5px 5px" class="row"><input type="text" id="jsMathInput5" placeholder="Inter number"></div>
+                                              <div class="row"><button id="jsMathButton" class="btn btn-link" click="">Input Numbers</button></div>
+                                              <div class="row"><button id="clearButtonMath" class="btn btn-link" click="">Clear</button></div>
+                                              <div class="row"><button id="toggleButtonMath" class="btn btn-link" click="">Show Code</button></div>
                                             </div>
                                             <div class="col">
                                                 <div class="row">
@@ -791,10 +797,10 @@
                                 <div class="container" style="padding: 50px 50px 50px 50px">
                                     <div class="row">
                                         <div class="col">
-                                            <div class="row"><input type="text" id="jsFactorialInput"></div>
-                                            <div class="row"><button id="jsFactorialButton" class="btn btn-secondary" click="">Input Number</button></div>
-                                            <div class="row"><button id="clearButtonFactorial" class="btn btn-secondary" click="">Clear</button></div>
-                                            <div class="row"><button id="toggleButtonFactorial" class="btn btn-secondary" click="">Show Code</button></div>
+                                            <div class="row"><input type="text" id="jsFactorialInput" placeholder="Inter number"></div>
+                                            <div class="row"><button id="jsFactorialButton" class="btn btn-link" click="">Input Number</button></div>
+                                            <div class="row"><button id="clearButtonFactorial" class="btn btn-link" click="">Clear</button></div>
+                                            <div class="row"><button id="toggleButtonFactorial" class="btn btn-link" click="">Show Code</button></div>
                                         </div>
                                         <div class="col">
                                             <div class="row">
@@ -871,9 +877,9 @@
                                         <div class="col">
                                             <div class="row"><input type="text" id="jsFizzBuzzInput1" placeholder="Inter number 1-100"></div>
                                             <div class="row"><input type="text" id="jsFizzBuzzInput2" placeholder="Inter number 1-100"></div>
-                                            <div class="row"><button id="jsFizzBuzzButton" class="btn btn-secondary" click="">Input Numbers</button></div>
-                                            <div class="row"><button id="clearButtonFizzBuzz" class="btn btn-secondary" click="">Clear</button></div>
-                                            <div class="row"><button id="toggleButtonFizzBuzz" class="btn btn-secondary" click="">Show Code</button></div>
+                                            <div class="row"><button id="jsFizzBuzzButton" class="btn btn-link" click="">Input Numbers</button></div>
+                                            <div class="row"><button id="clearButtonFizzBuzz" class="btn btn-link" click="">Clear</button></div>
+                                            <div class="row"><button id="toggleButtonFizzBuzz" class="btn btn-link" click="">Show Code</button></div>
                                         </div>
                                         <div class="col">
                                             <div class="row">
@@ -955,10 +961,10 @@
                                 <div class="container" style="padding: 50px 50px 50px 50px">
                                     <div class="row">
                                         <div class="col">
-                                            <div class="row"><input type="text" id="jsPalindroneInput"></div>
-                                            <div class="row"><button id="jsPalindroneButton" class="btn btn-secondary" click="">Input Word</button></div>
-                                            <div class="row"><button id="clearButtonPalindrone" class="btn btn-secondary" click="">Clear</button></div>
-                                            <div class="row"><button id="toggleButtonPalindrone" class="btn btn-secondary" click="">Show Code</button></div>
+                                            <div class="row"><input type="text" id="jsPalindroneInput" placeholder="Inter Word"></div>
+                                            <div class="row"><button id="jsPalindroneButton" class="btn btn-link" click="">Input Word</button></div>
+                                            <div class="row"><button id="clearButtonPalindrone" class="btn btn-link" click="">Clear</button></div>
+                                            <div class="row"><button id="toggleButtonPalindrone" class="btn btn-link" click="">Show Code</button></div>
                                         </div>
                                         <div class="col">
                                             <div class="row">
