--- a/ZachCashion_Personal_Website/index.html
+++ b/ZachCashion_Personal_Website/index.html
@@ -372,6 +372,7 @@
                     <i class="fas fa-download mr-2"></i>
                     ZachCashionResume.pdf
                 </a>
+                <a href="resume/ZachCashionResume.pdf">resume/ZachCashionResume.pdf</a>
             </div>
 
         </div>
