--- a/ZachCashion_Personal_Website/index.html
+++ b/ZachCashion_Personal_Website/index.html
@@ -151,6 +151,10 @@
                         <img src="Images/js.jpg" style="width:200px;" />
                     </div>
 
+                    <div style="text-align:center;" class="col-sm-6 col-md-4 col-lg-4">
+                        <img src="Images/aws-certified-cloud-practitioner.png" style="width:200px;" />
+                    </div>
+
                 </div>
             </div>
 
@@ -405,7 +409,7 @@
     <!-- Copyright Section -->
     <section class="copyright py-4 text-center text-white">
         <div class="container">
-            <small>Copyright &copy; Zach Cashion 2021</small>
+            <small>Copyright &copy; Zach Cashion 2023</small>
         </div>
     </section>
 
