--- a/ZachCashion_Personal_Website/index.html
+++ b/ZachCashion_Personal_Website/index.html
@@ -321,7 +321,7 @@
         <div class="container">
 
             <!-- Resume Section Heading -->
-            <h2 class="page-section-heading text-center text-uppercase text-white">Resume</h2>
+            <h2 class="page-section-heading text-center text-uppercase text-white">Resume & Certifications</h2>
 
             <!-- Icon Divider -->
             <div class="divider-custom divider-light">
@@ -337,6 +337,12 @@
                 <a class="btn btn-xl btn-outline-light" href="resume/ZachCashionResume.pdf">
                     <i class="fas fa-download mr-2"></i>
                     ZachCashionResume.pdf
+                </a>
+            </div>
+            <div class="text-center mt-4">
+                <a class="btn btn-xl btn-outline-light" href="resume/AWS Certified Cloud Practitioner certificate.pdf">
+                    <i class="fas fa-download mr-2"></i>
+                    AWS Certified Cloud Practitioner certificate.pdf
                 </a>
             </div>
 
